<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/g">

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:autofillHints="Name"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/enter_your_name"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:hint="@string/enter_email_address"
        android:layout_below="@id/editTextText"
        android:autofillHints="EmailAddress"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextTextEmailAddress2"
        android:autofillHints="Password"
        android:hint="@string/enter_password"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:onClick="signupUser"
        android:layout_below="@id/editTextTextPassword2"
        android:text="@string/button" />


</RelativeLayout>