<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/g">

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:hint="@string/enter_email"
        android:layout_alignParentTop="true"
        android:layout_marginTop="144dp"
        android:ems="10"
        android:autofillHints="EmailAddress"
        android:inputType="textEmailAddress"
        android:layout_alignParentEnd="true"/>

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="21dp"
        android:autofillHints="Password"
        android:hint="@string/enter_password"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_below="@id/editTextTextEmailAddress"
        android:layout_alignParentStart="true"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:onClick="signinUser"
        android:layout_below="@id/editTextTextPassword"
        android:layout_marginTop="55dp"
        android:text="@string/Sign_In" />

</RelativeLayout>